--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,70 @@
+body, p {
+	font-family: 'Helvetica Neue';
+}
 body {
-	background-color: rgba(65, 131, 196, 0.4);
-	color:#f4f4f4;
+	background-color: #f4f4f4;
 }
 .container {
-	width:780px;
-	text-align:center;
+	width:100%;
 	margin-left:auto;
 	margin-right:auto;
+	padding-top:100px;
+}
+#wrapper {
+	width:850px;
+	margin-left:auto;
+	margin-right:auto;
+	text-align:center;
+	background-color:#333;
+	padding:60px;
+	border-radius:25px;
+	-webkit-box-shadow: 0px 20px 20px 10px rgba(51, 51, 51, 0.4);
+	box-shadow: 0px 20px 20px 10px rgba(51, 51, 51, 0.4);
 }
 #zoko {
 	display:inline;
 }
-h1 {
-	font-family:'Helvetica Neue';
-	font-size:62px;
-	text-align:left;
-	margin-bottom:0px;
+#overlay {
+	width:850px;
+	height:450px;
+	z-index:1000;
+	position:absolute;
+	top:168px;
+	-webkit-box-shadow: inset 0px 0px 15px 7px rgba(51, 51, 51, 0.3);
+	box-shadow: inset 0px 0px 15px 7px rgba(51, 51, 51, 0.3);
+}
+#steps {
+	color:#333;
+	text-align:right;
+	width:200px;
+	display:block;
+	height:20px;
+	padding:0px;
+	float:right;
+	margin-top:10px;
+	margin-right:15px;
+	font-weight:bold;
+	font-size:18px;
+}
+
+.btn-group {
+	width:500px;
+	float:right;
+}
+
+.icon-btn {
+  display: inline-block;
+  padding: 9px 5px;
+  margin-bottom: 0;
+  font-size: 31px;
+  line-height: 20px;
+  color: #f4f4f4;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  float:right;
+  margin-top:10px;
+  background-color:#333;
+  border:0px solid #333;
+  font-weight:normal;
 }
