--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body, p {
-	font-family: 'Helvetica Neue';
+	font-family: 'Helvetica Neue', 'Arial', sans-serif;
 }
 body {
 	background-color: #f4f4f4;
@@ -67,4 +67,13 @@ body {
   background-color:#333;
   border:0px solid #333;
   font-weight:normal;
+}
+
+footer {
+	width:970px;
+	margin-left:auto;
+	margin-right:auto;
+	font-size:14px;
+	margin-top:100px;
+	text-align: center;
 }
