--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,26 @@ table {
 	-webkit-box-shadow: inset 0px 0px 15px 7px rgba(51, 51, 51, 0.3);
 	box-shadow: inset 0px 0px 15px 7px rgba(51, 51, 51, 0.3);
 }
+#overlay p {
+	color:#333;
+	text-align:right;
+	width:100%;
+	display:block;
+	height:20px;
+	padding:0px;
+	font-weight:bold;
+	font-size:22px;
+}
+#steps {
+	float:right;
+	margin-top:10px;
+	margin-right:15px;
+}
+#level {
+	float:right;
+	margin-top:360px;
+	margin-right:15px;
+}
 #menuOverlay {
 	width:850px;
 	height:450px;
@@ -118,19 +138,7 @@ table {
 	background-color:#fff;
 	color:#333;
 }
-#steps {
-	color:#333;
-	text-align:right;
-	width:200px;
-	display:block;
-	height:20px;
-	padding:0px;
-	float:right;
-	margin-top:10px;
-	margin-right:15px;
-	font-weight:bold;
-	font-size:22px;
-}
+
 #logo {
 	padding-right: 0;
 	padding-left: 0;
