--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,106 @@ footer {
 	margin-left:auto;
 	margin-right:auto;
 	font-size:14px;
-	margin-top:100px;
+	margin-top:70px;
 	text-align: center;
+	padding-bottom:40px;
+}
+footer p {
+	padding-top:30px;
+}
+
+.playerKeys, .restartLevelKey {
+	width:165px;
+	float:left;
+}
+.restartLevelKey {
+	padding-left:20px;
+}
+.playerKeys p, .restartLevelKey p {
+	margin:0px;
+	padding:0px;
+	color:#999;
+	font-size:13px;
+}
+ol {
+	list-style-type: none;
+	padding:0px;
+	margin:0px;
+}
+ol li {
+	float: left;
+	padding: 0px;
+	margin: 0px;
+}
+.key {
+	display: block;
+	color: #aaa;
+	text-decoration: none;
+	text-align: center;
+	width: 44px;
+	height: 41px;
+	margin: 5px;
+	background: #eff0f2;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	border-top: 1px solid #f5f5f5;
+	-webkit-box-shadow:
+		inset 0 0 25px #e8e8e8,
+		0 1px 0 #c3c3c3,
+		0 2px 0 #c9c9c9,
+		0 2px 3px #333;
+	-moz-box-shadow:
+		inset 0 0 25px #e8e8e8,
+		0 1px 0 #c3c3c3,
+		0 2px 0 #c9c9c9,
+		0 2px 3px #333;
+	box-shadow:
+		inset 0 0 25px #e8e8e8,
+		0 1px 0 #c3c3c3,
+		0 2px 0 #c9c9c9,
+		0 2px 3px #333;
+	text-shadow: 0px 1px 0px #f5f5f5;
+}
+
+ol.arrow-keys {
+	height:65px;
+	width:165px;
+	padding
+}
+#down {
+	height: 23px;
+}
+#up, #left, #right {
+	height: 24px;
+}
+#left, #right {
+	margin: 30px 5px 5px;
+}
+#up {
+	margin: 5px 5px 1px;
+	border-bottom-right-radius: 0px;
+	border-bottom-left-radius: 0px;
+}
+#down {
+	margin: 0 5px 5px;
+	border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
+}
+.restartLevelKey .key {
+	display: block;
+	text-transform: uppercase;
+	margin-left: 59px;
+	margin-bottom: 14px;
+	margin-top: 10px;
+	line-height: 41px;
+}
+
+p.footer {
+	clear:both;
+}
+
+.instructions {
+	width:350px;
+	margin-left:auto;
+	margin-right:auto;
 }
